<resources>
    <string name="app_name">PubCrawl</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="results_label">Search Results:</string>
    <string name="detail_title">Name of Bar Goes Here</string>
    <string name="missouri_lounge_desc">DJs spin a variety of tunes, from funk to garage rock, in this unassuming hangout with a patio.</string>
    <string name="jupiter_desc"><![CDATA[A 2-story venue & beer garden that serves up wood-fired pizzas plus handcrafted beers & ales.]]></string>
    <string name="nicks_lounge_desc"><![CDATA[Relaxed, unpretentious bar for local brews, nightly karaoke, live music & open-mike events.]]></string>
    <string name="hoi_polloi_desc"><![CDATA[Guests enjoy housemade brews & small American bites amid an industrial-chic setting.]]></string>
    <string name="graduate_desc"><![CDATA[Bustling watering hole with a neon marquee draws a diverse crowd for drink discounts & free popcorn.]]></string>
    <string name="moxy_desc"><![CDATA[An extensive list of draft beer & pub grub served in a funky spot with rustic wood tables & patio.]]></string>
    <string name="pappys_desc"><![CDATA[Lively sports bar with several TVs & a large projection screen, plus burgers, BBQ food & sandwiches.]]></string>
    <string name="beta_lounge_desc"><![CDATA[Dimly lit lounge & happy-hour fave serves rotating craft beers, specialty cocktails & light bites.]]></string>
    <string name="missouri_lounge_address">2600 San Pablo Ave</string>
    <string name="jupiter_address">2181 Shattuck Ave</string>
    <string name="nicks_lounge_address">3218 Adeline St</string>
    <string name="hoi_polloi_address">1763 Alcatraz Ave</string>
    <string name="graduate_address">6202 Claremont Ave</string>
    <string name="moxy_address">3136 Sacramento St</string>
    <string name="pappys_grill_address">3136 Sacramento St</string>
    <string name="beta_lounge_address">2129 Durant Ave</string>
    <string name="search_bars_text">Search for Bars in :</string>
    <string name="view_fav_button_text"> view favorites </string>
    <string name="search_by_name_hint">Search by name</string>
    <string name="search_by_rating_text">Search by rating:</string>
    <string name="search_by_price_text">Search by price:</string>
    <string name="miss_lounge">Missouri Lounge</string>
    <string name="jupiter">Jupiter</string>
    <string name="nick_lounge">Nick\'s Lounge</string>
    <string name="hoi_polloi">Hoi Polloi Brewpub</string>
    <string name="graduate">The Graduate</string>
    <string name="moxy">Moxy</string>
    <string name="pappys_grill">Pappy\'s Grill</string>
    <string name="beta_lounge">The Beta Lounge</string>
    <string name="dollarsign1">$</string>
    <string name="dollarsign3">$$$</string>
    <string name="dollarsign2">$$</string>
    <string name="fav_list_empty_text">Your favorites list is empty! Add some bars!</string>
    <string name="address_text">Address:</string>
    <string name="desc_text">Description:</string>
    <string name="rating_text">Rating:</string>
    <string name="price_text">Price:</string>
    <string name="add_fav_button_text"> Add Favorite </string>
    <string name="fav_title_text">Favorites:</string>

</resources>
