<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:weightSum="1"
    tools:context="com.example.nicolassaad.neighborhoodguideapp.MainActivity"
    tools:showIn="@layout/activity_main">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!--android:layout_weight=".6"-->

    <ImageView
        android:id="@+id/yellow_bk"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_centerVertical="true"
        android:background="#FFDF00" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/blue_background_size"
        android:layout_marginTop="25dp"
        android:layout_centerVertical="true"
        android:background="@android:color/holo_blue_light" />

    <ImageView
        android:id="@+id/cycle_img"
        android:layout_width="match_parent"
        android:scaleType="fitCenter"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerVertical="true"
        android:src="@drawable/betaloungeround" />

    <ImageView
        android:id="@+id/beer_icon_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:src="@drawable/beericonflipped" />

    <ImageView
        android:id="@+id/beer_icon_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:src="@drawable/beericon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_bars_text"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@id/search_text"
            android:layout_toRightOf="@id/search_text"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">
        </Spinner>

        <Button
            android:id="@+id/to_fav_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#FFDF00"
            android:text="@string/view_fav_button_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <CheckBox
            android:id="@+id/checkbox_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp" />

        <EditText
            android:id="@+id/search_by_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/checkbox_name"
            android:layout_toRightOf="@id/checkbox_name"
            android:hint="@string/search_by_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/search_by_rating_text"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <CheckBox
            android:id="@+id/checkbox_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_name"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="8dp" />

        <RatingBar
            android:id="@+id/search_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="#FFDF00"
            android:secondaryProgressTint="#FFDF00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_price_text"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <CheckBox
            android:id="@+id/checkbox_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_rating" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/price_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="false"
                android:measureWithLargestChild="false"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/low_price_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/mid_price_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$$"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/high_price_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$$$"
                    android:textSize="18dp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
